# Reframing-Retirement-AI-Coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: REFACTOR_PLAN.md  settings.json
.claude/hooks/: post_edit_test.py  pre_edit_guard.py
.github/workflows/: deploy.yml
Data/: reframing_retirement_activity_list.txt
backend/: __init__.py  app.py  models.py  session_store.py
backend/middleware/: auth.py  rate_limit.py
backend/voice/: __init__.py  routes.py  stt.py  tts.py
coach/: __init__.py  agent.py  constants.py  diagnostics.py  inference.py  prompts.py  state.py
config/: app_config.py
data/: What_Can_You_Do_At_Home_data_set.txt  reframing_retirement_master_data_set.txt
devops/: local-browser-guide.example.md
docs/: local-browser-guide-2.md  systems.md  tech-stack.md
eval/: .gitignore  EVALUATION_PLAN.md  dataset.py  eval_types.py  generation_eval.py  harness.py  judge_prompts.py  logger.py  report.py  retrieval_eval.py  run_eval.py  system_eval.py
frontend/: app.js  index.html  styles.css  test-voice.html
prompts/: __init__.py  prompt.py
rag/: __init__.py  config.py  ingest.py  parsing_activities.py  parsing_home.py  parsing_master.py  retriever.py  router.py
scripts/: cli.py  quickstart.sh
tests/: test_coach_agent_state.py  test_context_extraction.py  test_generate_response.py  test_lesson_overview.py  test_parsing_science.py  test_prompt_builder.py  test_rag_routing.py  test_stage_inference.py  test_technical_support.py
(+17 files in other folders)
